Changed message editing css and fixed table aligning

--- a/playstyle.css
+++ b/playstyle.css
@@ -1156,6 +1156,8 @@ neut
 {
 	border-radius: 8px;
 	width: 100%;
+	height:100%;
+	resize:none;
 }
 .grow
 {
